--- a/index.html
+++ b/index.html
@@ -3,12 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Сайт мой</title>
+    <style>
+    h1{ 
+        color: pink;
+    }
+    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> Что-то типо такого </h1>
-    <p> Текст 1</p>
-    <b>Текст 2 </b> <br>
-    <i>Текст 3</i> <hr>
-    <img src="55.jpg" alt="-----">
+ <div class="container">
+    <div class="header">
+        <h1>CAIT</h1>
+    <div class="nav"></div>
+    <div class="main"></div>
+    <div> class="clr"</div>
+    
+    <div class="footer"></div>
+     </div>   
+    </div>
+   
 </body>
 </html>
